--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,9 @@
 ------------------------------------------------------------------------------
+  Version 0.1.2 (2020-05-26)
+-------------------------------------------------------------------------------
+  * Small fixes
+
+------------------------------------------------------------------------------
   Version 0.1.1 (2020-05-16)
 -------------------------------------------------------------------------------
   * Forked from k3rmit v2.3
